Fix dropdown background too transparent on Firefox

--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -358,7 +358,7 @@ table em {
   display: none;
   position: absolute;
   border-radius:6px;
-  background: rgba(240,240,240,0.2);
+  background: rgba(240,240,240,0.8);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -808,7 +808,7 @@ button {
 /* Feedback */
 
 .feedback {
-    margin: 80px 0px 
+    margin: 8d0px 0px
 }
 
 .feedback ul {
